actually good constructors